--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,14 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install pytest pytest-cov
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        pytest tests
+        pytest --cov=codepack tests
+    - name: Upload coverage data to coveralls.io
+      run: |
+        python -m pip install coveralls==2.2
+        coveralls --service=github
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
