--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 dill==0.3.4
 pymongo==3.12.1
-numpy==1.21.3
+numpy
 sshtunnel==0.4.0
 PyMySQL==1.0.2
 pymssql==2.2.2
@@ -8,6 +8,4 @@ boto3==1.19.6
 cx-Oracle==8.2.1
 parse==1.19.0
 APScheduler==3.8.1
-pytest==6.2.5
-coverage==6.1.1
 mongomock==3.23.0
