Modify default services

--- a/config/codepack.ini
+++ b/config/codepack.ini
@@ -6,12 +6,12 @@ source = mongodb
 db = codepack
 collection = scheduler
 
-[code]
+[code_storage]
 source = mongodb
 db = codepack
 collection = codes
 
-[codepack]
+[codepack_storage]
 source = mongodb
 db = codepack
 collection = codepacks
@@ -21,7 +21,7 @@ source = mongodb
 db = codepack
 collection = cache
 
-[state]
+[code_snapshot]
 source = mongodb
 db = codepack
 collection = state
