--- a/config/test.ini
+++ b/config/test.ini
@@ -6,14 +6,14 @@ source = mongodb
 db = codepack
 collection = scheduler
 
-[code]
+[code_storage]
 source = memory
 
-[codepack]
+[codepack_storage]
 source = memory
 
 [cache]
 source = memory
 
-[state]
+[code_snapshot]
 source = memory
