--- a/config/codepack.ini
+++ b/config/codepack.ini
@@ -9,12 +9,12 @@ collection = scheduler
 [code_storage]
 source = mongodb
 db = codepack
-collection = codes
+collection = code
 
 [codepack_storage]
 source = mongodb
 db = codepack
-collection = codepacks
+collection = codepack
 
 [cache]
 source = mongodb
@@ -24,4 +24,9 @@ collection = cache
 [code_snapshot]
 source = mongodb
 db = codepack
-collection = state
+collection = code_snapshot
+
+[codepack_snapshot]
+source = mongodb
+db = codepack
+collection = codepack_snapshot
