Implement KafkaConsumer and KafkaProducer

--- a/config/codepack.ini
+++ b/config/codepack.ini
@@ -30,3 +30,8 @@ collection = code_snapshot
 source = mongodb
 db = codepack
 collection = codepack_snapshot
+
+[worker]
+source = kafka
+topic = codepack
+group_id = codepack_worker
