--- a/config/test.ini
+++ b/config/test.ini
@@ -25,3 +25,8 @@ source = memory
 source = kafka
 topic = test
 group_id = codepack_worker
+interval = 1
+
+[supervisor]
+source = kafka
+topic = test
