Add default_argpack_storage_service to CodePack

--- a/config/test.ini
+++ b/config/test.ini
@@ -12,6 +12,9 @@ source = memory
 [codepack_storage]
 source = memory
 
+[argpack_storage]
+source = memory
+
 [cache]
 source = memory
 
@@ -26,6 +29,7 @@ source = kafka
 topic = test
 group_id = codepack_worker
 interval = 1
+supervisor = http://localhost:8000
 
 [supervisor]
 source = kafka
