Add config examples

--- a/config/codepack.ini
+++ b/config/codepack.ini
@@ -16,6 +16,11 @@ source = mongodb
 db = codepack
 collection = codepack
 
+[argpack_storage]
+source = mongodb
+db = codepack
+collection = argpack
+
 [cache]
 source = mongodb
 db = codepack
@@ -35,3 +40,9 @@ collection = codepack_snapshot
 source = kafka
 topic = codepack
 group_id = codepack_worker
+interval = 1
+supervisor = http://localhost:8000
+
+[supervisor]
+source = kafka
+topic = codepack
