Add callback to Scheduler

--- a/config/test.ini
+++ b/config/test.ini
@@ -1,11 +1,6 @@
 [conn]
 path = config/test_conn.ini
 
-[scheduler]
-source = mongodb
-db = codepack
-collection = scheduler
-
 [code_storage]
 source = memory
 
@@ -23,6 +18,16 @@ source = memory
 
 [codepack_snapshot]
 source = memory
+
+[apiserver]
+scheduler = self
+supervisor = self
+
+[scheduler]
+source = mongodb
+db = codepack
+collection = scheduler
+supervisor = http://localhost:8000
 
 [worker]
 source = kafka
