--- a/config/test.ini
+++ b/config/test.ini
@@ -4,16 +4,16 @@ path = config/test_conn.ini
 [alias]
 path = config/alias.ini
 
-[code_storage]
+[code]
 source = memory
 
-[codepack_storage]
+[codepack]
 source = memory
 
-[argpack_storage]
+[argpack]
 source = memory
 
-[cache]
+[delivery]
 source = memory
 
 [code_snapshot]
