--- a/config/codepack.ini
+++ b/config/codepack.ini
@@ -1,27 +1,25 @@
 [conn]
 path = config/conn.ini
 
-[scheduler]
-source = mongodb
-db = codepack
-collection = scheduler
+[alias]
+path = config/alias.ini
 
-[code_storage]
+[code]
 source = mongodb
 db = codepack
 collection = code
 
-[codepack_storage]
+[codepack]
 source = mongodb
 db = codepack
 collection = codepack
 
-[argpack_storage]
+[argpack]
 source = mongodb
 db = codepack
 collection = argpack
 
-[cache]
+[delivery]
 source = mongodb
 db = codepack
 collection = cache
@@ -35,6 +33,16 @@ collection = code_snapshot
 source = mongodb
 db = codepack
 collection = codepack_snapshot
+
+[apiserver]
+scheduler = self
+supervisor = self
+
+[scheduler]
+source = mongodb
+db = codepack
+collection = scheduler
+supervisor = http://localhost:8000
 
 [worker]
 source = kafka
