Make codepack understand config directory via environment variable

--- a/config/test.ini
+++ b/config/test.ini
@@ -1,8 +1,8 @@
 [conn]
-path = config/test_conn.ini
+path = test_conn.ini
 
 [alias]
-path = config/alias.ini
+path = alias.ini
 
 [code]
 source = memory
