Implement get_docker_manager in Default

--- a/config/alias.ini
+++ b/config/alias.ini
@@ -17,3 +17,4 @@ mongo_snapshot_service = codepack.service.snapshot_service.mongo_snapshot_servic
 mongo_scheduler = codepack.scheduler.mongo_scheduler.MongoScheduler
 supervisor = codepack.employee.supervisor.Supervisor
 worker = codepack.employee.worker.Worker
+docker_manager = codepack.docker.docker_manager.DockerManager
