--- a/config/conn.ini
+++ b/config/conn.ini
@@ -48,3 +48,6 @@ region_name = ?
 endpoint_url = https://?
 aws_access_key_id = ?
 aws_secret_access_key = ?
+
+[docker]
+base_url = unix://var/run/docker.sock
