--- a/config/test.ini
+++ b/config/test.ini
@@ -42,3 +42,7 @@ supervisor = http://localhost:8000
 [supervisor]
 source = kafka
 topic = test
+
+[docker_manager]
+source = docker
+path = app/worker/
