Add sample config

--- a/config/conn.ini
+++ b/config/conn.ini
@@ -51,3 +51,10 @@ aws_secret_access_key = ?
 
 [docker]
 base_url = unix://var/run/docker.sock
+
+[s3]
+service_name = s3
+region_name = ?
+endpoint_url = https://?
+aws_access_key_id = ?
+aws_secret_access_key = ?
