--- a/config/test_conn.ini
+++ b/config/test_conn.ini
@@ -7,3 +7,10 @@ bootstrap_servers = localhost:9092
 
 [docker]
 base_url = unix://var/run/docker.sock
+
+[s3]
+service_name = s3
+region_name = ?
+endpoint_url = https://?
+aws_access_key_id = ?
+aws_secret_access_key = ?
