Refactor services by combining different implementations for different storage

--- a/config/alias.ini
+++ b/config/alias.ini
@@ -5,16 +5,15 @@ argpack = codepack.argpack.argpack.ArgPack
 code_snapshot = codepack.snapshot.code_snapshot.CodeSnapshot
 codepack_snapshot = codepack.snapshot.codepack_snapshot.CodePackSnapshot
 delivery = codepack.delivery.delivery.Delivery
-memory_storage_service = codepack.service.storage_service.memory_storage_service.MemoryStorageService
-file_storage_service = codepack.service.storage_service.file_storage_service.FileStorageService
-mongo_storage_service = codepack.service.storage_service.mongo_storage_service.MongoStorageService
-memory_delivery_service = codepack.service.delivery_service.memory_delivery_service.MemoryDeliveryService
-file_delivery_service = codepack.service.delivery_service.file_delivery_service.FileDeliveryService
-mongo_delivery_service = codepack.service.delivery_service.mongo_delivery_service.MongoDeliveryService
-memory_snapshot_service = codepack.service.snapshot_service.memory_snapshot_service.MemorySnapshotService
-file_snapshot_service = codepack.service.snapshot_service.file_snapshot_service.FileSnapshotService
-mongo_snapshot_service = codepack.service.snapshot_service.mongo_snapshot_service.MongoSnapshotService
+storage_service = codepack.service.storage_service.StorageService
+delivery_service = codepack.service.delivery_service.DeliveryService
+snapshot_service = codepack.service.snapshot_service.SnapshotService
 mongo_scheduler = codepack.scheduler.mongo_scheduler.MongoScheduler
 supervisor = codepack.employee.supervisor.Supervisor
 worker = codepack.employee.worker.Worker
 docker_manager = codepack.docker.docker_manager.DockerManager
+memory_storage = codepack.storage.memory_storage.MemoryStorage
+file_storage = codepack.storage.file_storage.FileStorage
+mongo_storage = codepack.storage.mongo_storage.MongoStorage
+kafka_storage = codepack.storage.kafka_storage.KafkaStorage
+s3_storage = codepack.storage.s3_storage.S3Storage
