Add run_opt to DockerManager and script to Worker

--- a/config/codepack.ini
+++ b/config/codepack.ini
@@ -20,9 +20,9 @@ db = codepack
 collection = argpack
 
 [delivery]
-source = mongodb
-db = codepack
-collection = cache
+source = s3
+bucket = codepack
+path = delivery
 
 [code_snapshot]
 source = mongodb
@@ -50,7 +50,13 @@ topic = codepack
 group_id = codepack_worker
 interval = 1
 supervisor = http://localhost:8000
+script = run_snapshot.py
 
 [supervisor]
 source = kafka
 topic = codepack
+
+[docker_manager]
+source = docker
+path = app/worker
+run_opt = {"dns": ["8.8.8.8"]}
