--- a/config/test.ini
+++ b/config/test.ini
@@ -38,6 +38,7 @@ topic = test
 group_id = codepack_worker
 interval = 1
 supervisor = http://localhost:8000
+script = run_snapshot.py
 
 [supervisor]
 source = kafka
@@ -46,3 +47,4 @@ topic = test
 [docker_manager]
 source = docker
 path = app/worker/
+run_opt = {"dns": ["8.8.8.8"]}
