--- a/config/codepack.ini
+++ b/config/codepack.ini
@@ -60,3 +60,7 @@ topic = codepack
 source = docker
 path = app/worker
 run_opt = {"dns": ["8.8.8.8"]}
+
+[logger]
+path = logging.json
+name = default-logger
