Implement default callback service

--- a/config/alias.ini
+++ b/config/alias.ini
@@ -5,9 +5,11 @@ argpack = codepack.argpack.argpack.ArgPack
 code_snapshot = codepack.snapshot.code_snapshot.CodeSnapshot
 codepack_snapshot = codepack.snapshot.codepack_snapshot.CodePackSnapshot
 delivery = codepack.delivery.delivery.Delivery
+callback = codepack.callback.callback.Callback
 storage_service = codepack.service.storage_service.StorageService
 delivery_service = codepack.service.delivery_service.DeliveryService
 snapshot_service = codepack.service.snapshot_service.SnapshotService
+callback_service = codepack.service.callback_service.CallbackService
 mongo_scheduler = codepack.scheduler.mongo_scheduler.MongoScheduler
 supervisor = codepack.employee.supervisor.Supervisor
 worker = codepack.employee.worker.Worker
