--- a/config/codepack.ini
+++ b/config/codepack.ini
@@ -34,6 +34,11 @@ source = mongodb
 db = codepack
 collection = codepack_snapshot
 
+[callback]
+source = mongodb
+db = codepack
+collection = codepack_callback
+
 [apiserver]
 scheduler = self
 supervisor = self
