--- a/config/test.ini
+++ b/config/test.ini
@@ -22,6 +22,9 @@ source = memory
 [codepack_snapshot]
 source = memory
 
+[callback]
+source = memory
+
 [apiserver]
 scheduler = self
 supervisor = self
@@ -46,5 +49,9 @@ topic = test
 
 [docker_manager]
 source = docker
-path = app/worker/
+path = app/worker
 run_opt = {"dns": ["8.8.8.8"]}
+
+[logger]
+path = logging.json
+name = default-logger
