Set default setting to file

--- a/config/codepack.ini
+++ b/config/codepack.ini
@@ -35,9 +35,8 @@ db = codepack
 collection = codepack_snapshot
 
 [callback]
-source = mongodb
-db = codepack
-collection = codepack_callback
+source = file
+path = callback
 
 [apiserver]
 scheduler = self
