Add default config of InterpreterManager

--- a/config/codepack.ini
+++ b/config/codepack.ini
@@ -36,7 +36,7 @@ collection = codepack_snapshot
 
 [callback]
 source = file
-path = callback
+path = app/worker
 
 [apiserver]
 scheduler = self
@@ -64,6 +64,9 @@ topic = codepack
 source = docker
 path = app/worker
 run_opt = {"dns": ["8.8.8.8"]}
+
+[interpreter_manager]
+path = /home/ihnokim/anaconda3/envs
 
 [logger]
 path = logging.json
