--- a/config/test.ini
+++ b/config/test.ini
@@ -53,6 +53,9 @@ source = docker
 path = app/worker
 run_opt = {"dns": ["8.8.8.8"]}
 
+[interpreter_manager]
+path = /home/ihnokim/anaconda3/envs
+
 [logger]
 path = logging.json
 name = default-logger
