Implement default InterpreterManager

--- a/config/alias.ini
+++ b/config/alias.ini
@@ -13,7 +13,8 @@ callback_service = codepack.service.callback_service.CallbackService
 mongo_scheduler = codepack.scheduler.mongo_scheduler.MongoScheduler
 supervisor = codepack.employee.supervisor.Supervisor
 worker = codepack.employee.worker.Worker
-docker_manager = codepack.docker.docker_manager.DockerManager
+docker_manager = codepack.manager.docker_manager.DockerManager
+interpreter_manager = codepack.manager.interpreter_manager.InterpreterManager
 memory_storage = codepack.storage.memory_storage.MemoryStorage
 file_storage = codepack.storage.file_storage.FileStorage
 mongo_storage = codepack.storage.mongo_storage.MongoStorage
