Add path to Worker

--- a/config/codepack.ini
+++ b/config/codepack.ini
@@ -54,6 +54,7 @@ topic = codepack
 group_id = codepack_worker
 interval = 1
 supervisor = http://localhost:8000
+path = app/worker
 script = run_snapshot.py
 
 [supervisor]
