--- a/config/test.ini
+++ b/config/test.ini
@@ -24,7 +24,7 @@ source = memory
 
 [callback]
 source = file
-path = callback
+path = app/worker
 
 [apiserver]
 scheduler = self
@@ -42,6 +42,7 @@ topic = test
 group_id = codepack_worker
 interval = 1
 supervisor = http://localhost:8000
+path = app/worker
 script = run_snapshot.py
 
 [supervisor]
