Change path of CallbackService, Worker, and DockerManager to scripts

--- a/config/codepack.ini
+++ b/config/codepack.ini
@@ -36,7 +36,7 @@ collection = codepack_snapshot
 
 [callback]
 source = file
-path = app/worker
+path = scripts
 
 [apiserver]
 scheduler = self
@@ -54,7 +54,7 @@ topic = codepack
 group_id = codepack_worker
 interval = 1
 supervisor = http://localhost:8000
-path = app/worker
+path = scripts
 script = run_snapshot.py
 
 [supervisor]
@@ -63,7 +63,7 @@ topic = codepack
 
 [docker_manager]
 source = docker
-path = app/worker
+path = scripts
 run_opt = {"dns": ["8.8.8.8"]}
 
 [interpreter_manager]
