--- a/config/test.ini
+++ b/config/test.ini
@@ -24,7 +24,7 @@ source = memory
 
 [callback]
 source = file
-path = app/worker
+path = scripts
 
 [apiserver]
 scheduler = self
@@ -42,7 +42,7 @@ topic = test
 group_id = codepack_worker
 interval = 1
 supervisor = http://localhost:8000
-path = app/worker
+path = scripts
 script = run_snapshot.py
 
 [supervisor]
@@ -51,7 +51,7 @@ topic = test
 
 [docker_manager]
 source = docker
-path = app/worker
+path = scripts
 run_opt = {"dns": ["8.8.8.8"]}
 
 [interpreter_manager]
