Set Supervisor as the fixed member of the API Server and add an option to redirect the user request to the remote Scheduler

--- a/config/codepack.ini
+++ b/config/codepack.ini
@@ -39,8 +39,7 @@ source = file
 path = scripts
 
 [apiserver]
-scheduler = self
-supervisor = self
+scheduler = http://localhost:8001
 
 [scheduler]
 source = mongodb
