Add worker-logger and set default log_dir

--- a/config/codepack.ini
+++ b/config/codepack.ini
@@ -55,6 +55,7 @@ interval = 1
 supervisor = http://localhost:8000
 path = scripts
 script = run_snapshot.py
+logger = worker-logger
 
 [supervisor]
 source = kafka
@@ -71,3 +72,4 @@ path = /home/ihnokim/anaconda3/envs
 [logger]
 path = logging.json
 name = error-logger
+log_dir = logs
