--- a/config/test.ini
+++ b/config/test.ini
@@ -43,6 +43,7 @@ interval = 1
 supervisor = http://localhost:8000
 path = scripts
 script = run_snapshot.py
+logger = worker-logger
 
 [supervisor]
 source = kafka
@@ -59,3 +60,4 @@ path = /home/ihnokim/anaconda3/envs
 [logger]
 path = logging.json
 name = default-logger
+log_dir = logs
