--- a/config/default.ini
+++ b/config/default.ini
@@ -5,41 +5,29 @@ path = conn.ini
 path = alias.ini
 
 [code]
-source = mongodb
-db = codepack
-collection = code
+source = memory
 
 [codepack]
-source = mongodb
-db = codepack
-collection = codepack
+source = memory
 
 [argpack]
-source = mongodb
-db = codepack
-collection = argpack
+source = memory
 
 [delivery]
-source = s3
-bucket = codepack
-path = delivery
+source = memory
 
 [code_snapshot]
-source = mongodb
-db = codepack
-collection = code_snapshot
+source = memory
 
 [codepack_snapshot]
-source = mongodb
-db = codepack
-collection = codepack_snapshot
+source = memory
 
 [callback]
 source = file
 path = scripts
 
 [apiserver]
-scheduler = http://localhost:8001
+scheduler = self
 
 [scheduler]
 source = mongodb
@@ -49,7 +37,7 @@ supervisor = http://localhost:8000
 
 [worker]
 source = kafka
-topic = codepack
+topic = test
 group_id = codepack_worker
 interval = 1
 supervisor = http://localhost:8000
@@ -59,7 +47,7 @@ logger = worker-logger
 
 [supervisor]
 source = kafka
-topic = codepack
+topic = test
 
 [docker_manager]
 source = docker
@@ -71,5 +59,5 @@ path = /home/codepack/anaconda3/envs
 
 [logger]
 path = logging.json
-name = error-logger
+name = default-logger
 log_dir = logs
