Implement to use default settings when nothing is set

--- a/codepack/config/default/default.ini
+++ b/codepack/config/default/default.ini
@@ -1,9 +1,6 @@
 [conn]
 path = conn.ini
 
-[alias]
-path = alias.ini
-
 [code]
 source = memory
 
@@ -33,7 +30,6 @@ scheduler = self
 source = mongodb
 db = codepack
 collection = scheduler
-supervisor = http://localhost:8000
 
 [worker]
 source = kafka
@@ -41,7 +37,7 @@ topic = test
 group_id = codepack_worker
 interval = 1
 supervisor = http://localhost:8000
-path = scripts
+path = codepack/employee/scripts
 script = run_snapshot.py
 logger = worker-logger
 
@@ -51,13 +47,12 @@ topic = test
 
 [docker_manager]
 source = docker
-path = scripts
 run_opt = {"dns": ["8.8.8.8"]}
 
 [interpreter_manager]
-path = /home/codepack/anaconda3/envs
+path = ${HOME}/anaconda3/envs
+run_opt = {}
 
 [logger]
-path = logging.json
 name = default-logger
 log_dir = logs
