Reorganize package structure

--- a/codepack/config/default/alias.ini
+++ b/codepack/config/default/alias.ini
@@ -6,15 +6,15 @@ code_snapshot = codepack.snapshot.code_snapshot.CodeSnapshot
 codepack_snapshot = codepack.snapshot.codepack_snapshot.CodePackSnapshot
 delivery = codepack.delivery.delivery.Delivery
 callback = codepack.callback.callback.Callback
-storage_service = codepack.service.storage_service.StorageService
-delivery_service = codepack.service.delivery_service.DeliveryService
-snapshot_service = codepack.service.snapshot_service.SnapshotService
-callback_service = codepack.service.callback_service.CallbackService
-mongo_scheduler = codepack.scheduler.mongo_scheduler.MongoScheduler
-supervisor = codepack.employee.supervisor.Supervisor
-worker = codepack.employee.worker.Worker
-docker_manager = codepack.employee.docker_manager.DockerManager
-interpreter_manager = codepack.employee.interpreter_manager.InterpreterManager
+storage_service = codepack.plugin.storage_service.StorageService
+delivery_service = codepack.plugin.delivery_service.DeliveryService
+snapshot_service = codepack.plugin.snapshot_service.SnapshotService
+callback_service = codepack.plugin.callback_service.CallbackService
+mongo_scheduler = codepack.plugin.mongo_scheduler.MongoScheduler
+supervisor = codepack.plugin.supervisor.Supervisor
+worker = codepack.plugin.worker.Worker
+docker_manager = codepack.plugin.docker_manager.DockerManager
+interpreter_manager = codepack.plugin.interpreter_manager.InterpreterManager
 memory_storage = codepack.storage.memory_storage.MemoryStorage
 file_storage = codepack.storage.file_storage.FileStorage
 mongo_storage = codepack.storage.mongo_storage.MongoStorage
