Implement Messenger and refactor Worker and Supervisor

--- a/codepack/config/default/alias.ini
+++ b/codepack/config/default/alias.ini
@@ -18,5 +18,5 @@ interpreter_manager = codepack.plugin.interpreter_manager.InterpreterManager
 memory_storage = codepack.storage.memory_storage.MemoryStorage
 file_storage = codepack.storage.file_storage.FileStorage
 mongo_storage = codepack.storage.mongo_storage.MongoStorage
-kafka_storage = codepack.storage.kafka_storage.KafkaStorage
+kafka_messenger = codepack.storage.kafka_messenger.KafkaMessenger
 s3_storage = codepack.storage.s3_storage.S3Storage
