--- a/codepack/config/default/alias.ini
+++ b/codepack/config/default/alias.ini
@@ -12,6 +12,7 @@ snapshot_service = codepack.plugin.snapshot_service.SnapshotService
 callback_service = codepack.plugin.callback_service.CallbackService
 mongo_scheduler = codepack.plugin.mongo_scheduler.MongoScheduler
 supervisor = codepack.plugin.supervisor.Supervisor
+scheduler = codepack.plugin.scheduler.Scheduler
 worker = codepack.plugin.worker.Worker
 docker_manager = codepack.plugin.docker_manager.DockerManager
 interpreter_manager = codepack.plugin.interpreter_manager.InterpreterManager
@@ -20,3 +21,5 @@ file_storage = codepack.storage.file_storage.FileStorage
 mongo_storage = codepack.storage.mongo_storage.MongoStorage
 kafka_messenger = codepack.storage.kafka_messenger.KafkaMessenger
 s3_storage = codepack.storage.s3_storage.S3Storage
+memory_jobstore = codepack.storage.memory_jobstore.MemoryJobStore
+mongo_jobstore = codepack.storage.mongo_jobstore.MongoJobStore
