--- a/codepack/config/default/default.ini
+++ b/codepack/config/default/default.ini
@@ -27,13 +27,11 @@ path = scripts
 scheduler = self
 
 [scheduler]
-source = mongodb
-db = codepack
-collection = scheduler
+source = memory
 
 [worker]
 source = kafka
-topic = test
+topic = codepack
 group_id = codepack_worker
 interval = 1
 supervisor = http://localhost:8000
