Put connection config values into main config files and remove connection config files

--- a/codepack/config/default/default.ini
+++ b/codepack/config/default/default.ini
@@ -1,6 +1,3 @@
-[conn]
-path = conn.ini
-
 [code]
 source = memory
 
@@ -35,8 +32,6 @@ topic = codepack
 group_id = codepack_worker
 interval = 1
 supervisor = http://localhost:8000
-path = codepack/employee/scripts
-script = run_snapshot.py
 logger = worker-logger
 
 [supervisor]
@@ -54,3 +49,64 @@ run_opt = {}
 [logger]
 name = default-logger
 log_dir = logs
+
+[ssh]
+ssh_host = 1.2.3.4
+ssh_port = 22
+ssh_username = ?
+ssh_password = ?
+
+[mongodb]
+host = localhost,?
+port = 27017
+username = ?
+password = ?
+replicaSet = ?
+
+[mysql]
+host = localhost
+port = 3306
+user = ?
+passwd = ?
+charset = utf8
+cursorclass = pymysql.cursors.Cursor
+; cursorclass = pymysql.cursors.DictCursor
+
+[mssql]
+host = localhost
+port = 1433
+user = ?
+password = ?
+charset = utf8
+as_dict = False
+
+[oracledb]
+host = localhost
+port = 1621
+service_name = ?
+user = ?
+password = ?
+as_dict = False
+
+[kafka]
+bootstrap_servers=?:9092,?:9092,?:9092
+
+[rest_api]
+my_service = https://?:?/?
+
+[dynamodb]
+service_name = dynamodb
+region_name = ?
+endpoint_url = https://?
+aws_access_key_id = ?
+aws_secret_access_key = ?
+
+[docker]
+base_url = unix://var/run/docker.sock
+
+[s3]
+service_name = s3
+region_name = ?
+endpoint_url = https://?
+aws_access_key_id = ?
+aws_secret_access_key = ?
