--- a/config/codepack.ini
+++ b/config/codepack.ini
@@ -1,9 +1,3 @@
-[conn]
-path = conn.ini
-
-[alias]
-path = alias.ini
-
 [code]
 source = mongodb
 db = codepack
@@ -53,8 +47,7 @@ topic = codepack
 group_id = codepack_worker
 interval = 1
 supervisor = http://localhost:8000
-path = scripts
-script = run_snapshot.py
+script_path = scripts/run_snapshot.py
 logger = worker-logger
 
 [supervisor]
@@ -68,8 +61,70 @@ run_opt = {"dns": ["8.8.8.8"]}
 
 [interpreter_manager]
 path = /home/codepack/anaconda3/envs
+run_opt = {}
 
 [logger]
 path = logging.json
 name = error-logger
 log_dir = logs
+
+[ssh]
+ssh_host = 1.2.3.4
+ssh_port = 22
+ssh_username = ?
+ssh_password = ?
+
+[mongodb]
+host = localhost,?
+port = 27017
+username = ?
+password = ?
+replicaSet = ?
+
+[mysql]
+host = localhost
+port = 3306
+user = ?
+passwd = ?
+charset = utf8
+cursorclass = pymysql.cursors.Cursor
+; cursorclass = pymysql.cursors.DictCursor
+
+[mssql]
+host = localhost
+port = 1433
+user = ?
+password = ?
+charset = utf8
+as_dict = False
+
+[oracledb]
+host = localhost
+port = 1621
+service_name = ?
+user = ?
+password = ?
+as_dict = False
+
+[kafka]
+bootstrap_servers=?:9092,?:9092,?:9092
+
+[rest_api]
+my_service = https://?:?/?
+
+[dynamodb]
+service_name = dynamodb
+region_name = ?
+endpoint_url = https://?
+aws_access_key_id = ?
+aws_secret_access_key = ?
+
+[docker]
+base_url = unix://var/run/docker.sock
+
+[s3]
+service_name = s3
+region_name = ?
+endpoint_url = https://?
+aws_access_key_id = ?
+aws_secret_access_key = ?
