--- a/config/test.ini
+++ b/config/test.ini
@@ -1,6 +1,3 @@
-[conn]
-path = test_conn.ini
-
 [code]
 source = memory
 
@@ -35,11 +32,10 @@ supervisor = http://localhost:8000
 [worker]
 source = kafka
 topic = test
-group_id = codepack_worker
-interval = 1
+group_id = codepack_worker_test
+interval = 5
 supervisor = http://localhost:8000
-path = scripts
-script = run_snapshot.py
+script_path = scripts/run_snapshot.py
 logger = worker-logger
 
 [supervisor]
@@ -53,8 +49,32 @@ run_opt = {"dns": ["8.8.8.8"]}
 
 [interpreter_manager]
 path = /home/codepack/anaconda3/envs
+run_opt = {}
 
 [logger]
-path = logging.json
+config_path = logging.json
 name = default-logger
 log_dir = logs
+
+[ssh]
+ssh_host = localhost
+ssh_port = 22
+ssh_username = test
+ssh_password = 1234
+
+[mongodb]
+host = localhost
+port = 27017
+
+[kafka]
+bootstrap_servers = localhost:9092
+
+[docker]
+base_url = unix://var/run/docker.sock
+
+[s3]
+service_name = s3
+region_name = ?
+endpoint_url = https://?
+aws_access_key_id = ?
+aws_secret_access_key = ?
