Implement MemoryMessenger which mimics KafkaMessenger

--- a/codepack/config/default/alias.ini
+++ b/codepack/config/default/alias.ini
@@ -19,6 +19,7 @@ interpreter_manager = codepack.plugin.interpreter_manager.InterpreterManager
 memory_storage = codepack.storage.memory_storage.MemoryStorage
 file_storage = codepack.storage.file_storage.FileStorage
 mongo_storage = codepack.storage.mongo_storage.MongoStorage
+memory_messenger = codepack.storage.memory_messenger.MemoryMessenger
 kafka_messenger = codepack.storage.kafka_messenger.KafkaMessenger
 s3_storage = codepack.storage.s3_storage.S3Storage
 memory_jobstore = codepack.storage.memory_jobstore.MemoryJobStore
