Make default worker and supervisor use MemoryMessenger

--- a/codepack/config/default/default.ini
+++ b/codepack/config/default/default.ini
@@ -27,16 +27,15 @@ scheduler = self
 source = memory
 
 [worker]
-source = kafka
+source = memory
 topic = codepack
-group_id = codepack_worker
 interval = 1
-supervisor = http://localhost:8000
 logger = worker-logger
+background = True
 
 [supervisor]
-source = kafka
-topic = test
+source = memory
+topic = codepack
 
 [docker_manager]
 source = docker
