Refactor directory structure and get_default_config method

--- a/codepack/config/default/default.ini
+++ b/codepack/config/default/default.ini
@@ -18,7 +18,7 @@ source = memory
 
 [callback]
 source = file
-path = scripts
+; path = scripts
 
 [apiserver]
 scheduler = self
@@ -30,6 +30,7 @@ source = memory
 source = memory
 topic = codepack
 interval = 1
+; script_path = scripts/run_snapshot.py
 logger = worker-logger
 background = True
 
@@ -39,6 +40,7 @@ topic = codepack
 
 [docker_manager]
 source = docker
+; path = scripts
 run_opt = {"dns": ["8.8.8.8"]}
 
 [interpreter_manager]
@@ -46,6 +48,7 @@ path = ${HOME}/anaconda3/envs
 run_opt = {}
 
 [logger]
+; config_path = logging.json
 name = default-logger
 log_dir = logs
 
@@ -56,11 +59,8 @@ ssh_username = ?
 ssh_password = ?
 
 [mongodb]
-host = localhost,?
+host = localhost
 port = 27017
-username = ?
-password = ?
-replicaSet = ?
 
 [mysql]
 host = localhost
