--- a/config/codepack.ini
+++ b/config/codepack.ini
@@ -30,7 +30,7 @@ collection = codepack_snapshot
 
 [callback]
 source = file
-path = scripts
+; path = scripts
 
 [apiserver]
 scheduler = http://localhost:8001
@@ -47,8 +47,9 @@ topic = codepack
 group_id = codepack_worker
 interval = 1
 supervisor = http://localhost:8000
-script_path = scripts/run_snapshot.py
+; script_path = scripts/run_snapshot.py
 logger = worker-logger
+background = False
 
 [supervisor]
 source = kafka
@@ -56,7 +57,7 @@ topic = codepack
 
 [docker_manager]
 source = docker
-path = scripts
+; path = scripts
 run_opt = {"dns": ["8.8.8.8"]}
 
 [interpreter_manager]
@@ -64,7 +65,7 @@ path = /home/codepack/anaconda3/envs
 run_opt = {}
 
 [logger]
-path = logging.json
+; config_path = logging.json
 name = error-logger
 log_dir = logs
 
