Move Arg and ArgPack into root directory

--- a/codepack/config/default/alias.ini
+++ b/codepack/config/default/alias.ini
@@ -1,7 +1,8 @@
 [alias]
 code = codepack.code.Code
 codepack = codepack.codepack.CodePack
-argpack = codepack.argpack.argpack.ArgPack
+arg = codepack.arg.Arg
+argpack = codepack.argpack.ArgPack
 code_snapshot = codepack.snapshot.code_snapshot.CodeSnapshot
 codepack_snapshot = codepack.snapshot.codepack_snapshot.CodePackSnapshot
 delivery = codepack.delivery.delivery.Delivery
