Remove MemoryJobStore and MongoJobStore, and implement JobStore and StorableJob

--- a/codepack/config/default/alias.ini
+++ b/codepack/config/default/alias.ini
@@ -14,6 +14,8 @@ callback_service = codepack.plugin.callback_service.CallbackService
 mongo_scheduler = codepack.plugin.mongo_scheduler.MongoScheduler
 supervisor = codepack.plugin.supervisor.Supervisor
 scheduler = codepack.plugin.scheduler.Scheduler
+jobstore = codepack.plugin.jobstore.JobStore
+storable_job = codepack.plugin.storable_job.StorableJob
 worker = codepack.plugin.worker.Worker
 docker_manager = codepack.plugin.docker_manager.DockerManager
 interpreter_manager = codepack.plugin.interpreter_manager.InterpreterManager
@@ -23,5 +25,3 @@ mongo_storage = codepack.storage.mongo_storage.MongoStorage
 memory_messenger = codepack.storage.memory_messenger.MemoryMessenger
 kafka_messenger = codepack.storage.kafka_messenger.KafkaMessenger
 s3_storage = codepack.storage.s3_storage.S3Storage
-memory_jobstore = codepack.storage.memory_jobstore.MemoryJobStore
-mongo_jobstore = codepack.storage.mongo_jobstore.MongoJobStore
