--- a/codepack/utils/config/default/default.ini
+++ b/codepack/utils/config/default/default.ini
@@ -41,10 +41,10 @@ topic = codepack
 [docker_manager]
 source = docker
 ; path = scripts
-run_opt = {"dns": ["8.8.8.8"]}
+run_opt = {"dns": ["8.8.8.8"], "auto_remove": true}
 
 [interpreter_manager]
-path = ${HOME}/anaconda3/envs
+path = /opt/codepack/anaconda3/envs
 run_opt = {}
 
 [logger]
@@ -53,20 +53,23 @@ name = default-logger
 log_dir = logs
 
 [ssh]
-ssh_host = 1.2.3.4
+ssh_host = localhost
 ssh_port = 22
-ssh_username = ?
-ssh_password = ?
+ssh_username = codepack
+ssh_password = codepack
 
 [mongodb]
 host = localhost
 port = 27017
+; username = ?
+; password = ?
+; replicaSet = ?
 
 [mysql]
 host = localhost
 port = 3306
-user = ?
-passwd = ?
+user = codepack
+passwd = codepack
 charset = utf8
 cursorclass = pymysql.cursors.Cursor
 ; cursorclass = pymysql.cursors.DictCursor
@@ -74,38 +77,35 @@ cursorclass = pymysql.cursors.Cursor
 [mssql]
 host = localhost
 port = 1433
-user = ?
-password = ?
+user = codepack
+password = codepack
 charset = utf8
 as_dict = False
 
 [oracledb]
 host = localhost
 port = 1621
-service_name = ?
-user = ?
-password = ?
+service_name = codepack
+user = codepack
+password = codepack
 as_dict = False
 
 [kafka]
-bootstrap_servers=?:9092,?:9092,?:9092
-
-[rest_api]
-my_service = https://?:?/?
+bootstrap_servers=localhost:9092
 
 [dynamodb]
 service_name = dynamodb
-region_name = ?
-endpoint_url = https://?
-aws_access_key_id = ?
-aws_secret_access_key = ?
+; region_name = codepack
+; endpoint_url = https://localhost:443
+aws_access_key_id = codepack
+aws_secret_access_key = codepack
 
 [docker]
 base_url = unix://var/run/docker.sock
 
 [s3]
 service_name = s3
-region_name = ?
-endpoint_url = https://?
-aws_access_key_id = ?
-aws_secret_access_key = ?
+; region_name = codepack
+; endpoint_url = https://localhost:443
+aws_access_key_id = codepack
+aws_secret_access_key = codepack
