--- a/config/codepack.ini
+++ b/config/codepack.ini
@@ -1,92 +1,75 @@
 [code]
-source = mongodb
-db = codepack
-collection = code
+source = memory
 
 [codepack]
-source = mongodb
-db = codepack
-collection = codepack
+source = memory
 
 [argpack]
-source = mongodb
-db = codepack
-collection = argpack
+source = memory
 
 [delivery]
-source = s3
-bucket = codepack
-path = delivery
+source = memory
 
 [code_snapshot]
-source = mongodb
-db = codepack
-collection = code_snapshot
+source = memory
 
 [codepack_snapshot]
-source = mongodb
-db = codepack
-collection = codepack_snapshot
+source = memory
 
 [callback]
 source = file
 ; path = scripts
 
 [apiserver]
-scheduler = http://localhost:8001
+scheduler = self
 
 [scheduler]
-source = mongodb
-db = codepack
-collection = scheduler
-supervisor = http://localhost:8000
+source = memory
 
 [worker]
-source = kafka
+source = memory
 topic = codepack
-group_id = codepack_worker
 interval = 1
-supervisor = http://localhost:8000
 ; script_path = scripts/run_snapshot.py
 logger = worker-logger
-background = False
+background = True
 
 [supervisor]
-source = kafka
+source = memory
 topic = codepack
 
 [docker_manager]
 source = docker
 ; path = scripts
-run_opt = {"dns": ["8.8.8.8"]}
+run_opt = {"dns": ["8.8.8.8"], "auto_remove": true}
 
 [interpreter_manager]
-path = /home/codepack/anaconda3/envs
+path = /opt/codepack/anaconda3/envs
 run_opt = {}
 
 [logger]
 ; config_path = logging.json
-name = error-logger
+name = default-logger
 log_dir = logs
 
 [ssh]
-ssh_host = 1.2.3.4
+ssh_host = localhost
 ssh_port = 22
-ssh_username = ?
-ssh_password = ?
+ssh_username = codepack
+ssh_password = codepack
 
 [mongodb]
-host = localhost,?
+host = localhost
 port = 27017
-username = ?
-password = ?
-replicaSet = ?
+; username = ?
+; password = ?
+; replicaSet = ?
 
 [mysql]
 host = localhost
 port = 3306
-user = ?
-passwd = ?
+user = codepack
+passwd = codepack
 charset = utf8
 cursorclass = pymysql.cursors.Cursor
 ; cursorclass = pymysql.cursors.DictCursor
@@ -94,38 +77,35 @@ cursorclass = pymysql.cursors.Cursor
 [mssql]
 host = localhost
 port = 1433
-user = ?
-password = ?
+user = codepack
+password = codepack
 charset = utf8
 as_dict = False
 
 [oracledb]
 host = localhost
 port = 1621
-service_name = ?
-user = ?
-password = ?
+service_name = codepack
+user = codepack
+password = codepack
 as_dict = False
 
 [kafka]
-bootstrap_servers=?:9092,?:9092,?:9092
-
-[rest_api]
-my_service = https://?:?/?
+bootstrap_servers=localhost:9092
 
 [dynamodb]
 service_name = dynamodb
-region_name = ?
-endpoint_url = https://?
-aws_access_key_id = ?
-aws_secret_access_key = ?
+; region_name = codepack
+; endpoint_url = https://localhost:443
+aws_access_key_id = codepack
+aws_secret_access_key = codepack
 
 [docker]
 base_url = unix://var/run/docker.sock
 
 [s3]
 service_name = s3
-region_name = ?
-endpoint_url = https://?
-aws_access_key_id = ?
-aws_secret_access_key = ?
+; region_name = codepack
+; endpoint_url = https://localhost:443
+aws_access_key_id = codepack
+aws_secret_access_key = codepack
