Add an option to disable default config parsing and make get_config return empty dictionary instead of raising exceptions or returning None when the section is not found

--- a/codepack/utils/config/default/default.ini
+++ b/codepack/utils/config/default/default.ini
@@ -55,8 +55,8 @@ log_dir = logs
 [ssh]
 ssh_host = localhost
 ssh_port = 22
-ssh_username = codepack
-ssh_password = codepack
+; ssh_username = codepack
+; ssh_password = codepack
 
 [mongodb]
 host = localhost
