Add extras_require "all" and lighten default package

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest pytest-cov mongomock
         pip install -r requirements.txt
+        pip install -r extra-requirements.txt
     - name: Run Tests
       run: |
         pytest --cov=codepack tests
