Split Messenger to MessageSender and MessageReceiver

--- a/codepack/utils/config/default/alias.ini
+++ b/codepack/utils/config/default/alias.ini
@@ -20,6 +20,8 @@ interpreter_manager = codepack.plugins.interpreter_manager.InterpreterManager
 memory_storage = codepack.storages.memory_storage.MemoryStorage
 file_storage = codepack.storages.file_storage.FileStorage
 mongo_storage = codepack.storages.mongo_storage.MongoStorage
-memory_messenger = codepack.storages.memory_messenger.MemoryMessenger
-kafka_messenger = codepack.storages.kafka_messenger.KafkaMessenger
+memory_message_sender = codepack.storages.memory_message_sender.MemoryMessageSender
+memory_message_receiver = codepack.storages.memory_message_receiver.MemoryMessageReceiver
+kafka_message_sender = codepack.storages.kafka_message_sender.KafkaMessageSender
+kafka_message_receiver = codepack.storages.kafka_message_receiver.KafkaMessageReceiver
 s3_storage = codepack.storages.s3_storage.S3Storage
