--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
         pip install -r extra-requirements.txt
     - name: Run Tests
       run: |
-        pytest --cov=codepack tests
+        pytest --cov codepack --cov apps tests
     - name: Upload coverage data to coveralls.io
       run: |
         python -m pip install coveralls==2.2
