--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-cov mongomock
+        pip install pytest pytest-cov mongomock fastapi
         pip install -r requirements.txt
         pip install -r extra-requirements.txt
     - name: Run Tests
