Feature app testing (#165)
* Update CI/CD script to get coverage from apps

* Implement test codes for basic CRUD of Codes

* Add fixtures for API test and test cases which are related to Code execution

* Add test codes for CodePack management of apiserver

* Add test codes for ArgPack management API

* Update scheduler API

* Add fastapi installation

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,12 +21,12 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-cov mongomock
+        pip install pytest pytest-cov mongomock fastapi
         pip install -r requirements.txt
         pip install -r extra-requirements.txt
     - name: Run Tests
       run: |
-        pytest --cov=codepack tests
+        pytest --cov codepack --cov apps tests
     - name: Upload coverage data to coveralls.io
       run: |
         python -m pip install coveralls==2.2
