--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
     branches: ['*']
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04  # ubuntu-latest
     strategy:
       max-parallel: 4
       matrix:
@@ -21,7 +21,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-cov mongomock fastapi
+        pip install pytest pytest-cov mongomock fastapi httpx
         pip install -r requirements.txt
         pip install -r extra-requirements.txt
     - name: Run Tests
